# CimaEngine3v

./: CMakeLists.txt
assets/config/: figuras.txt
src/: CMakeLists.txt
src/Juego/: CMakeLists.txt  Juego.cpp  Juego.hpp
src/Juego/Componentes/: JComponentes.cpp  JComponentes.hpp
src/Juego/Escenas/: EscenaAustria.cpp  EscenaAustria.hpp  EscenaCirculo.cpp  EscenaCirculo.hpp  EscenaCuadro.cpp  EscenaCuadro.hpp  EscenaEjemplo.cpp  EscenaEjemplo.hpp  EscenaMuerte.cpp  EscenaMuerte.hpp  Escena_Menu.cpp  Escena_Menu.hpp
src/Juego/Figuras/: Figura.cpp  Figura.hpp
src/Juego/Maquinas/: FSM.hpp
src/Juego/Maquinas/JugadorFSM/: IdleFSM.cpp  IdleFSM.hpp  MoverFSM.cpp  MoverFSM.hpp
src/Juego/Sistema/: Sistema.cpp  Sistema.hpp
src/Juego/objetos/: Entidad.cpp  Entidad.hpp  Mapa.cpp  Mapa.hpp  TileMap.cpp  TileMap.hpp
src/Main/: CMakeLists.txt  main.cpp
src/Motor/: CMakeLists.txt  Motor.cpp  Motor.hpp
src/Motor/App/: ALayer.hpp
src/Motor/Camaras/: Camaras.cpp  Camaras.hpp  CamarasGestor.cpp  CamarasGestor.hpp
src/Motor/Componentes/: IComponentes.cpp  IComponentes.hpp
src/Motor/GUI/: GDock.cpp  GDock.hpp  GLayer.hpp  GListaObjetos.cpp  GListaObjetos.hpp  GLogger.cpp  GLogger.hpp  GPropiedades.cpp  GPropiedades.hpp  GViewport.cpp  GViewport.hpp
src/Motor/Inputs/: Botones.cpp  Botones.hpp
src/Motor/Primitivos/: CEPool.cpp  CEPool.hpp  CMakeLists.txt  Escena.hpp  GestorAssets.cpp  GestorAssets.hpp  GestorEscenas.cpp  GestorEscenas.hpp  GestorSonido.cpp  GestorSonido.hpp  Objetos.cpp  Objetos.hpp
src/Motor/Render/: CMakeLists.txt  Render.cpp  Render.hpp
src/Motor/Utils/: CEInterfaces.hpp  Lerp.cpp  Lerp.hpp  Lista.hpp  Nodo.hpp  Utils.hpp  Vector2D.cpp  Vector2D.hpp
