project(CimaEngine3v)

add_executable(CimaEngine3v main.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/App/App.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Primitivos/Objetos.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Primitivos/Objetos.hpp
        ../Juego/Figuras/Figura.cpp
        ../Juego/Figuras/Figura.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Utils/Vector2D.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Utils/Vector2D.hpp
        ../Juego/Componentes/JComponentes.cpp
        ../Juego/Componentes/JComponentes.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Componentes/IComponentes.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Componentes/IComponentes.hpp
        ../Juego/Sistema/Sistema.cpp
        ../Juego/Sistema/Sistema.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Utils/CEInterfaces.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Utils/Nodo.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Utils/Lista.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/GUI/GLogger.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/GUI/GLogger.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Camaras/Camaras.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Camaras/Camaras.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Camaras/CamarasGestor.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Camaras/CamarasGestor.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/GUI/GListaObjetos.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/GUI/GListaObjetos.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Primitivos/CEPool.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Primitivos/CEPool.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Inputs/Botones.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Inputs/Botones.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Primitivos/Escena.hpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Primitivos/GestorEscenas.cpp
        ../../../../Escritorio/CimaEngine3v/src/Motor/Primitivos/GestorEscenas.hpp
        ../Juego/Escenas/EscenaAustria.cpp
        ../Juego/Escenas/EscenaAustria.hpp
        ../Juego/Escenas/EscenaCirculo.cpp
        ../Juego/Escenas/EscenaCirculo.hpp
        ../Juego/Escenas/EscenaMuerte.cpp
        ../Juego/Escenas/EscenaMuerte.hpp
        ../Juego/Escenas/Escena_Menu.cpp
        ../Juego/Escenas/Escena_Menu.hpp
        ../Motor/Primitivos/GestorAssets.cpp
        ../Motor/Primitivos/GestorAssets.hpp
        ../Juego/objetos/Entidad.cpp
        ../Juego/objetos/Entidad.hpp
        ../Juego/objetos/TileMap.cpp
        ../Juego/objetos/TileMap.hpp
        ../Juego/objetos/Texto.cpp
        ../Juego/objetos/Texto.hpp
        ../Motor/Utils/Lerp.cpp
        ../Motor/Utils/Lerp.hpp
        ../Juego/Maquinas/FSM.hPP
        ../Juego/Maquinas/JugadorFSM/IdleFSM.hPP
        ../Juego/Maquinas/JugadorFSM/IdleFSM.cpp
        ../Juego/Maquinas/JugadorFSM/MoverFSM.cpp
        ../Juego/Maquinas/JugadorFSM/MoverFSM.hpp
        ../Juego/objetos/Mapa.cpp
        ../Juego/objetos/Mapa.hpp
        ../Motor/Primitivos/GestorSonido.cpp
        ../Motor/Primitivos/GestorSonido.hpp
        ../Motor/GUI/GPropiedades.cpp
        ../Motor/GUI/GPropiedades.hpp
        ../Juego/Escenas/EscenaEjemplo.cpp
        ../Juego/Escenas/EscenaEjemplo.hpp

)